<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_FRUOPIn" Id="{b034820e-af88-4c3d-9e6a-b5df4b6f2d60}">
    <Declaration><![CDATA[TYPE ST_FRUOPIn :
STRUCT
	UI01_IMSTP : BIT;
	UI02_Hold : BIT;
	UI03_SFSPD : BIT;
	UI04_CycleStop : BIT;
	UI05_FaultReset : BIT;
	UI06_Start : BIT;
	UI07_Home : BIT;
	UI08_Enable : BIT;
	UI09_RSR1_PNS1 : BIT;
	UI10_RSR2_PNS2 : BIT;
	UI11_RSR3_PNS3 : BIT;
	UI12_RSR4_PNS4 : BIT;
	UI13_RSR5_PNS5 : BIT;
	UI14_RSR6_PNS6 : BIT;
	UI15_RSR7_PNS7 : BIT;
	UI16_RSR8_PNS8 : BIT;
	UI17_PNSStrobe : BIT;
	UI18_ProdStart : BIT;
	UI19,UI20,UI21,UI22
	,UI23,UI24,UI25,UI26
	,UI27,UI28,UI29,UI30
	,UI31,UI32 : BIT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>