<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_FRUOPOut" Id="{c09c0fa8-a0f8-4e8a-8c3e-0c8df8403bf0}">
    <Declaration><![CDATA[TYPE ST_FRUOPOut :
STRUCT
	UO01_CmdEnabled : BIT;
	UO02_SystemReady : BIT;
	UO03_PrgRunning : BIT;
	UO04_PrgPaused : BIT;
	UO05_MotionHeld : BIT;
	UO06_Fault : BIT;
	UO07_AtPerch : BIT;
	UO08_TPEnabled : BIT;
	UO09_BattAlarm : BIT;
	UO10_Busy : BIT;
	UO11_ACK1_SNO1 : BIT;
	UO12_ACK2_SNO2 : BIT;
	UO13_ACK3_SNO3 : BIT;
	UO14_ACK4_SNO4 : BIT;
	UO15_ACK5_SNO5 : BIT;
	UO16_ACK6_SNO6 : BIT;
	UO17_ACK7_SNO7 : BIT;
	UO18_ACK8_SNO8 : BIT;
	UO19_SNACK : BIT;
	UO20_Reserved : BIT;
	UO21,UO22,UO23
	,UO24,UO25,UO26
	,UO27,UO28,UO29
	,UO30,UO31,UO32 : BIT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>